[add] section demo

--- a/index.html
+++ b/index.html
@@ -50,7 +50,27 @@
     </header>
 
     <main>
-
+        <section class="demo">
+            <div class="container debug">
+                <div class="row flex wrap debug">
+                    <div class="col">
+                        <div class="card-large debug"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card-small debug"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card-small debug"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card-small debug"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card-small debug"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
