--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 
                      <div class="nav-desktop flex">
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            
                         </ul>
                         <ul>
                             <li class="get-started"></li>
