--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
     </header>
 
     <main>
+
+        <!-- SEZIONE DEMO  -->
+
         <section class="demo">
             <div class="container debug">
                 <div class="row flex wrap debug">
                     
                     <div class="card-large debug"></div>
-                    <div class="card-small debug"></div>
+                    <div id="larger" class="card-small debug"></div>
                     <div class="card-small debug"></div>
                     <div class="card-small debug"></div>
                     <div class="card-small debug"></div>
@@ -65,6 +68,16 @@
                
             </div>
         </section>
+
+        <!-- SEZIONE DEMO  -->
+
+        <section class="strategic">
+            <div class="container debug">
+                <div class="img"></div>
+                <h2>Strategic Planning</h2>
+            </div>
+        </section>
+
     </main>
 
     <footer>
