--- a/index.html
+++ b/index.html
@@ -71,12 +71,20 @@
 
         <!-- SEZIONE DEMO  -->
 
-        <section class="strategic">
+        <!-- SEZIONE STRATEGIC  -->
+
+        <section class="strategic debug">
             <div class="container debug">
-                <div class="img"></div>
-                <h2>Strategic Planning</h2>
+              <div class="row">
+                <div class="col1 debug">IMG + text</div>
+              </div>
+              <div class="row">
+                <div class="col2 debug">IMG</div>
+              </div>
             </div>
-        </section>
+          </section>
+
+          <!-- SEZIONE STRATEGIC  -->
 
     </main>
 
