--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
 
           <!-- SEZIONE STRATEGIC  -->
 
+          <section class="testimonial debug">
+            <div class="container debug">
+                <div class="row">
+                    <div class="col debug"></div>
+                    <div class="col debug"></div>
+                    <div class="col debug"></div>
+                    <div class="col debug"></div>
+                </div>
+            </div>
+          </section>
+
     </main>
 
     <footer>
