--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
 
             <section class="about debug">
                 <div class="container debug">
-                    
-                    <h2>About Us</h2>
+
                     <div class="row">
-                        <div class="col debug"></div>
+                        
+                        <div class="col debug">
+                            <h2>About Us</h2>
+                        </div>
                         <div class="col debug"></div>
                     </div>
                 </div>
