--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
 
            <!-- SEZIONE ABOUT US  -->
 
+           <!-- SEZIONE FREE  -->
+            <section class="free">
+                <div class="container debug">
+                    <div class="text debug"></div>
+                </div>
+            </section>
+
+            <!-- SEZIONE FREE  -->
+
     </main>
 
     <footer>
