--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <!-- SEZIONE BENEFITS  -->
 
           <section class="benefits debug">
-            <div class="container">
+            <div class="container debug">
       
               <h2>Benefits</h2>
               <div class="row">
@@ -148,9 +148,11 @@
             <!-- SEZIONE FREE  -->
 
     </main>
-
+            
     <footer>
-
+        <div class="container debug">
+            <div class="footer-text debug"></div>
+        </div>
     </footer>
 
 </body>
