[add] menu link desktop

--- a/index.html
+++ b/index.html
@@ -31,18 +31,15 @@
 
                      <!-- nav desktop  -->
 
-                     <div class="nav-desktop flex">
-                        <ul>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            
-                        </ul>
-                        <ul>
-                            <li class="get-started"></li>
-                        </ul>
-                     </div>
+                    <div class="nav-desktop debug">
+                        <ul class="flex debug">
+                            <li><a href="#">Planning</a></li>
+                            <li><a href="#">Testimonials</a></li>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a id="get-started" href="#"></a>Get Started</li>
+                        </ul>   
+                    </div>
                      
                      <!-- nav desktop  -->
                 </div>
