--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="menu-header">
             <div class="container flex debug between">
                 <div class="logo debug flex">
-                    <span>logo</span>
+                    <img src="img/logo.png" alt="">
                 </div>
                 <div class="nav flex">
                      <!-- nav hamburgher  -->
