--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
             <div class="container debug">
                 <div class="row flex wrap debug">
                     
-                    <div class="card-large debug"></div>
+                    <div class="card-large debug">
+                        <div class="text-card debug">
+                            <h2>Get a demo application</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                            <a href="#"><i class="fa-brands fa-apple"></i>App Store</a>
+                            <img src="img/phone.png" alt="">
+                        </div>
+                    </div>
                     <div id="larger" class="card-small debug"></div>
                     <div class="card-small debug"></div>
                     <div class="card-small debug"></div>
