--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                             <h2>Get a demo application</h2>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
                             <a href="#"><i class="fa-brands fa-apple"></i>App Store</a>
+                        </div>
+                        <div class="img-card-l debug">
                             <img src="img/phone.png" alt="">
                         </div>
                     </div>
