--- a/index.html
+++ b/index.html
@@ -65,10 +65,42 @@
                             <img src="img/phone.png" alt="">
                         </div>
                     </div>
-                    <div id="larger" class="card-small debug"></div>
-                    <div class="card-small debug"></div>
-                    <div class="card-small debug"></div>
-                    <div class="card-small debug"></div>
+                    <div id="larger" class="card-small debug">
+                        <div class="icon-card-s-l debug">
+                            <i class="fa-solid fa-file-code"></i>
+                        </div>
+                        <div class="text-card debug">
+                            <h2>Clean Code</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                        </div>
+                    </div>
+                    <div class="card-small debug">
+                        <div class="icon-card-s-l debug">
+                            <i class="fa-solid fa-compass-drafting"></i>
+                        </div>
+                        <div class="text-card debug">
+                            <h2>Web Design</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                        </div>
+                    </div>
+                    <div class="card-small debug">
+                        <div class="icon-card-s-l debug">
+                            <i class="fa-solid fa-laptop-code"></i>
+                        </div>
+                        <div class="text-card debug">
+                            <h2>Developement</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                        </div>
+                    </div>
+                    <div class="card-small debug">
+                        <div class="icon-card-s-l debug">
+                            <i class="fa-solid fa-bullhorn"></i>
+                        </div>
+                        <div class="text-card debug">
+                            <h2>Branding</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                        </div>
+                    </div>
                     
                 </div>
                
@@ -82,10 +114,23 @@
         <section class="strategic debug">
             <div class="container debug">
               <div class="row">
-                <div class="col1 debug">IMG + text</div>
+                <div class="col1 debug">
+                    <div class="strategic-img-text">
+                        <img src="img/planning1.png" alt="">
+                        <h2>Strategic Planning</h2>
+                        <p>Egestas dui id omare arcu odio. In tellus integer feugiat scelerisque varius morbi enim nunc. Habitasse platea dictumst quisque sagittis. Interdum velit euismod in pellentesque massa placerat duis. Quis viverra nibh cras pulvinar mattis.</p>
+                    </div>
+                </div>
               </div>
               <div class="row">
-                <div class="col2 debug">IMG</div>
+                <div class="col2 debug">
+                    <div class="card debug">
+                        <img src="img/planning2.png" alt="">
+                        <h2>App Developement</h2>
+                        <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+                        <i class="fa-solid fa-arrow-down-long"></i>
+                    </div>
+                </div>
               </div>
             </div>
           </section>
