sezione testimonial mobile

--- a/index.html
+++ b/index.html
@@ -142,10 +142,40 @@
           <section class="testimonial debug">
             <div class="container debug">
                 <div class="row">
-                    <div class="col debug"></div>
-                    <div class="col debug"></div>
-                    <div class="col debug"></div>
-                    <div class="col debug"></div>
+                    <div class="col debug">
+                        <p>TESTIMONIALS</p>
+                        <h2>We are committed expert partners</h2>
+                        <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
+                    </div>
+                    <div class="col debug">
+                        <div class="card debug">
+                            <div class="card-img debug"><img src="img/testimonial1.jpg" alt=""></div>
+                            <div class="card-text debug">
+                                <p><i class="fa-solid fa-quote-left"></i> Vitae suscipit tellus mauris a diam maecenas sed enim ut.
+                                    Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh pulvinar proin. <i class="fa-solid fa-quote-right"></i></p>
+                                    <h3>NAT REYNOLDS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col debug">
+                        <div class="card debug">
+                            <div class="card-img debug"><img src="img/testimonial2.jpg" alt=""></div>
+                            <div class="card-text debug">
+                                <p><i class="fa-solid fa-quote-left"></i> Pharetra vel turpis nunc eget lorem. Quisque id diam vel quam elementum pulvinar etiam. Urna porttitor rhoncus dolor purus non enim praesent
+                                    elementum. <i class="fa-solid fa-quote-right"></i></p>
+                                    <h3>CELIA ALMEDA</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col debug">
+                        <div class="card debug">
+                            <div class="card-img debug"><img src="img/testimonial3.jpg" alt=""></div>
+                            <div class="card-text debug">
+                                <p><i class="fa-solid fa-quote-left"></i> Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin. Nibh nisl condimentum id venenatis a condimentum. <i class="fa-solid fa-quote-right"></i></p>
+                                    <h3>BOB ROBERTS</h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
           </section>
