sezione benefits mobile

--- a/index.html
+++ b/index.html
@@ -187,14 +187,65 @@
           <section class="benefits debug">
             <div class="container debug">
       
-              <h2>Benefits</h2>
               <div class="row">
-                <div class="col debug"></div>
-                <div class="col debug"></div>
-                <div class="col debug"></div>
-                <div class="col debug"></div>
-                <div class="col debug"></div>
-                <div class="col debug"></div>
+                <div class="col debug">
+                    <h2>Benefits of working with us</h2>
+                </div>
+                <div class="col debug">
+                    <div class="card debug">
+                        <div class="card-text debug">
+                            <h2 id="num">01</h2>
+                            <h3>Hight Quality</h3>
+                            <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                            <a href="#">more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col debug">
+                    <div class="card debug">
+                        <div class="card-text debug">
+                            <h2 id="num">02</h2>
+                            <h3>Creative Team</h3>
+                            <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                            <a href="#">more</a>
+                        </div>
+                </div>
+                <div class="col debug">
+                    <div class="card debug">
+                        <div class="card-text debug">
+                            <h2 id="num">03</h2>
+                            <h3>Amazing Results</h3>
+                            <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                            <a href="#">more</a>
+                        </div>
+                </div>
+                <div class="col debug">
+                    <div class="card debug">
+                        <div class="card-text debug">
+                            <h2 id="num">04</h2>
+                            <h3>Best Pricing</h3>
+                            <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                            <a href="#">more</a>
+                        </div>
+                </div>
+                <div class="col debug">
+                    <div class="card debug">
+                        <div class="card-text debug">
+                            <h2 id="num">05</h2>
+                            <h3>Innovations</h3>
+                            <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                            <a href="#">more</a>
+                        </div>
+                </div>
+                <div class="col debug">
+                    <div class="card debug">
+                        <div class="card-text debug">
+                            <h2 id="num">06</h2>
+                            <h3>24/7 Support</h3>
+                            <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                            <a href="#">more</a>
+                        </div>
+                </div>
               </div>
               
             </div>
