sezione benefits completa

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                             <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
                             <a href="#">more</a>
                         </div>
+                    </div>
                 </div>
                 <div class="col debug">
                     <div class="card debug">
@@ -218,6 +219,7 @@
                             <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
                             <a href="#">more</a>
                         </div>
+                    </div>
                 </div>
                 <div class="col debug">
                     <div class="card debug">
@@ -227,6 +229,7 @@
                             <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
                             <a href="#">more</a>
                         </div>
+                    </div>
                 </div>
                 <div class="col debug">
                     <div class="card debug">
@@ -236,6 +239,7 @@
                             <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
                             <a href="#">more</a>
                         </div>
+                    </div>
                 </div>
                 <div class="col debug">
                     <div class="card debug">
@@ -245,6 +249,7 @@
                             <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Present semper feugiat nibh sed pulvinar proin id venenatis.</p>
                             <a href="#">more</a>
                         </div>
+                    </div>
                 </div>
               </div>
               
