--- a/index.html
+++ b/index.html
@@ -267,8 +267,19 @@
                         
                         <div class="col debug">
                             <h2>About Us</h2>
+                            <p class="p-top">Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.</p>
+                            <p class="p-bottom">Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim. the text box. Click again or double click to start editing the text.</p>
                         </div>
-                        <div class="col debug"></div>
+                        <div class="col debug">
+                            <div class="card-img debug">
+                                <img src="img/about.jpg" alt="">
+                                <i class="fa-solid fa-quote-left"></i>
+                            </div>
+                            <div class="card-text">
+                                <h3>I help companies tincidunt tortor aliquam nulla facilis cras fermentum odio.</h3>
+                                <a href="#"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
