--- a/index.html
+++ b/index.html
@@ -271,11 +271,9 @@
                             <p class="p-bottom">Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim. the text box. Click again or double click to start editing the text.</p>
                         </div>
                         <div class="col debug">
-                            <div class="card-img debug">
+                            <div class="card-img-text debug">
                                 <img src="img/about.jpg" alt="">
-                                <i class="fa-solid fa-quote-left"></i>
-                            </div>
-                            <div class="card-text">
+                                <i id="quote" class="fa-solid fa-quote-left"></i>
                                 <h3>I help companies tincidunt tortor aliquam nulla facilis cras fermentum odio.</h3>
                                 <a href="#"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
                             </div>
