--- a/index.html
+++ b/index.html
@@ -287,7 +287,14 @@
            <!-- SEZIONE FREE  -->
             <section class="free">
                 <div class="container debug">
-                    <div class="text debug"></div>
+                    <div class="text debug">
+                        <p id="grey">GET STARTED</p>
+                        <h3>Simple, Transparent Pricing</h3>
+                        <h2>It's Free!</h2>
+                        <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls.</p>
+                        <a id="get" href="#">Get Started</a>
+                        <p id="small">Copyright 2021 Boolean <i class="fa-solid fa-circle"></i> Classe XX <i class="fa-solid fa-circle"></i> <a href="#">Privacy policy</a></p>
+                    </div>
                 </div>
             </section>
 
