--- a/index.html
+++ b/index.html
@@ -304,7 +304,10 @@
             
     <footer>
         <div class="container debug">
-            <div class="footer-text debug"></div>
+            <div class="footer-text debug">
+                <p class="top">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla pariatur impedit!</p>
+                <p class="bottom"><a href="#">Lorem ipsum</a> scelerisque mauris pellentesque <a href="#">Boolean careers</a></p>
+            </div>
         </div>
     </footer>
 
