--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="col debug">
                         <p>TESTIMONIALS</p>
                         <h2>We are committed expert partners</h2>
-                        <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
+                        <p id="desk">We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
                     </div>
                     <div class="col debug">
                         <div class="card debug">
